@@ -1,3 +1,8 @@
+2006-12-09  Matthias Wimmer  <m@tthias.eu>
+
+    * jabberd/mio_ssl.c: changed behaviour: using dNSName for cert
+	verification also if id-on-xmppAddr is present. (RFC 3920bis)
+
 2006-12-08  Matthias Wimmer  <m@tthias.eu>
 
     * jsm/modules/mod_privacy.c: sending an id attribute in list pushes
